vault/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.vault.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: vault
          port: 80
    - match: Host(`vault.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: vault
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: russellhost-tls
